--- a/package.json
+++ b/package.json
@@ -3,26 +3,30 @@
   "version": "1.0.0",
   "description": "A p5.asciify renderer plugin for drawing patterns on brightness ranges.",
   "type": "module",
-  "types": "./dist/types/PatternRendererPlugin.d.ts",
+  "types": "./dist/types/index.d.ts",
   "main": "./dist/p5.asciify-pattern-renderer-plugin.umd.js",
   "module": "./dist/p5.asciify-pattern-renderer-plugin.esm.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build && tsc",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build-docs": "typedoc",
+    "dev-docs": "typedoc --watch"
   },
   "devDependencies": {
+    "@types/p5": "^1.7.6",
+    "typedoc": "^0.28.4",
+    "typedoc-plugin-markdown": "^4.6.3",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
-    "vite-plugin-glsl": "^1.3.1",
-    "@types/p5": "^1.7.6"
+    "vite-plugin-glsl": "^1.3.1"
   },
   "dependencies": {
     "p5.asciify": "^0.9.7-beta.1"
   },
   "exports": {
     ".": {
-      "types": "./dist/types/PatternRendererPlugin.d.ts",
+      "types": "./dist/types/index.d.ts",
       "import": "./dist/p5.asciify-pattern-renderer-plugin.esm.js",
       "require": "./dist/p5.asciify-pattern-renderer-plugin.umd.js"
     }
